# graphql-mcp

./: .coverage  .coveragerc  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  EVALUATION.md  LICENSE  Makefile  README.md  coverage.xml  docker-compose.yml  glama.json  mutmut.ini  mutmut_config.py  pyproject.toml  pytest.ini  server.json  setup.cfg
.github/workflows/: ci.yml  publish.yml
.planning/: AUTONOMOUS-WORKFLOW-COMPLETION.md  AUTONOMOUS-WORKFLOW-ISSUES.md  MAINTENANCE-OPENAPI-ADDED.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  discussion-phase-14.md  phase-14-summary.md  plan-phase-14.md  v1.0-MILESTONE-AUDIT.md  v2.1-MILESTONE-AUDIT.md  v2.1-MILESTONE-COMPLETION.md  v2.2-MILESTONE-AUDIT.md  v2.2-MILESTONE-COMPLETION.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/phases/: phase-17-audit.md  phase-17-context.md  phase-17-plan.md  phase-17-summary.md  phase-20-summary.md  phase-5-plan.md  phase-5-summary.md
.planning/phases/01-foundation-schema-sources/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-operations-errors-federation/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-native-faces/: 03-01-PLAN.md  (+6 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  STACK.md  SUMMARY.md
docs/: RELEASE.md  subscription-guide.md
examples/: async_query.py  basic_query.py  subscription.py
mutants/: pyproject.toml
mutants/tests/: test_async_http_transport.py  test_async_operations.py  test_cli.py  test_contract_pact.py  test_contract_schema_detailed.py  test_contract_shapes.py  test_copier_template.py  test_http_transport_codec.py  test_mtls.py  test_operations.py  test_otel_bootstrap.py  test_property_invariants.py  test_property_queries.py  test_rest.py  test_schema_analyzer.py  test_sse_subscribe.py  test_ttl_cache.py
native/: Cargo.toml
native/src/: lib.rs
openapi/: Makefile  README.md  convert.py  openapi.json  openapi.yaml  validate.py
scripts/: auto-release.sh  run_staging.sh  staging_smoke.py
src/generic_graphql_mcp/: __init__.py  config.py
src/graphql_mcp/: __init__.py  config.py
src/mutants/: setup.cfg
template/: copier.yml
template/project/: Dockerfile.jinja  pyproject.toml.jinja
tests/: conftest.py  test_async_client_lifecycle.py  test_async_http_transport.py  test_async_operations.py  test_audit_logging.py  test_cli.py  test_client_lifecycle.py  test_codec_parity.py  test_contract_schema.py  test_contract_schema_detailed.py  test_contract_shapes.py  test_copier_template.py  test_domain_purity.py  test_http_transport_codec.py  test_mcp_http.py  test_mcp_stdio.py  test_mtls.py  test_oauth2.py  test_operations.py  test_otel_bootstrap.py  test_otel_inbound.py  test_otel_integration.py  test_otel_log_correlation.py  test_otel_metrics.py  test_otel_outbound.py  test_property_invariants.py  test_query_guard.py  test_rest.py  test_schema_analyzer.py  test_schema_cascade.py  test_schema_error_handling.py  test_security_middleware.py  test_serve_command.py  test_sse_subscribe.py  test_subscribe.py  test_ttl_cache.py  test_ws_transport.py
tests/benchmarks/: conftest.py  test_codec_bench.py
tests/integration/: Dockerfile.tests  mock_server.py  test_integration.py
(+159 files in other folders)
