[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "graphql-mcp"
dynamic = ["version"]
description = "Generic read-only GraphQL MCP brick — schema discovery, query execution, error typing, federation ownership"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "graphql-core~=3.2.11",
    "pydantic>=2.13,<3",
    "pydantic-settings>=2.14,<3",
    "httpx>=0.28,<1",
    "orjson>=3.11,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "respx>=0.22",
    "ruff>=0.15",
    "pytest-cov>=5",
]

[tool.maturin]
python-source = "src"
module-name = "graphql_mcp._native"
manifest-path = "native/Cargo.toml"
features = ["pyo3/extension-module"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
