[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "generic-graphql-mcp"
dynamic = ["version"]
description = "Generic read-only GraphQL MCP brick — schema discovery, query execution, error typing, federation ownership"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "graphql-core~=3.2.11",
    "pydantic>=2.13,<3",
    "pydantic-settings>=2.14,<3",
    "httpx>=0.28,<1",
    "orjson>=3.11,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=4.0",
    "pytest-syrupy>=4.0",
    "hypothesis>=6.0",
    "pact-python>=1.0",
    "respx>=0.22",
    "ruff>=0.15",
    "pytest-cov>=5",
    "httpx[cli]>=0.28",
    "websockets>=12,<14",
    "generic-graphql-mcp[otel]",
]
server = [
    "fastapi>=0.100,<1",
    "uvicorn>=0.20,<1",
]
mcp = [
    "mcp>=1.0,<2",
]
cli = [
    "click>=8,<9",
]
otel = [
    "opentelemetry-api>=1.20,<2",
    "opentelemetry-sdk>=1.20,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.20,<2",
    "opentelemetry-instrumentation-httpx>=0.44b0",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "opentelemetry-instrumentation-logging>=0.44b0",
]
subscriptions = [
    "websockets>=12,<14",
]
all = [
    "generic-graphql-mcp[server,mcp,cli,otel,subscriptions]",
]

[project.scripts]
generic-graphql-mcp = "generic_graphql_mcp.adapters.inbound.cli:main"

[tool.maturin]
python-source = "src"
module-name = "generic_graphql_mcp._native"
manifest-path = "native/Cargo.toml"
features = ["pyo3/extension-module"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/__pycache__/*",
    "*/benchmarks/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:"
]
show_missing = true
skip_covered = false
precision = 2
fail_under = 85

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--benchmark-disable --cov=src --cov-report=term-missing --cov-report=html --cov-report=xml --cov-fail-under=80"
